Bug 1658097 - [fission] Send resource timing data for cross-origin frames to the correct process r=nika,necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D96754