dom/performance/PerformanceStorageWorker.h
@@ -29,7 +29,9 @@ class PerformanceStorageWorker final : public PerformanceStorage {
 
   void AddEntry(nsIHttpChannel* aChannel,
                 nsITimedChannel* aTimedChannel) override;
-
+  virtual void AddEntry(const nsString& entryName,
+                        const nsString& initiatorType,
+                        UniquePtr<PerformanceTimingData>&& aData) override {}
   void AddEntryOnWorker(UniquePtr<PerformanceProxyData>&& aData);
 
  private:
